Using tabs instead of spaces and minor cleanup

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,54 +1,54 @@
 .App {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 header {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    margin: 0px 20px 20px 20px;
-    font-size: x-large;
-    border-bottom: 1px solid lightgray;
+	display: flex;
+	align-items: center;
+	padding: 10px;
+	margin: 0 20px 20px;
+	font-size: x-large;
+	border-bottom: 1px solid lightgray;
 }
 
 header img {
-    padding: 5px;
-    margin: 10px;
-    rotate: 270deg;
-    opacity: 0.7;
-    scale: 2;
-    cursor: pointer;
+	padding: 5px;
+	margin: 10px;
+	rotate: 270deg;
+	opacity: 0.7;
+	scale: 2;
+	cursor: pointer;
 }
 
 header img:hover {
-    filter: brightness(0.5);
+	filter: brightness(0.5);
 }
 
 header .bread {
-    display: flex;
-    align-items: center;
-    vertical-align: middle;
+	display: flex;
+	align-items: center;
+	vertical-align: middle;
 }
 
 .file-list {
-    display: flex;
-    flex-wrap: wrap;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 span {
-    cursor: pointer;
-    user-select: none;
-    border-radius: 10px;
-    padding: 10px 5px;
-    margin: 5px;
+	cursor: pointer;
+	user-select: none;
+	border-radius: 10px;
+	padding: 10px 5px;
+	margin: 5px;
 }
 
 span:hover {
-    background-color: lightgray;
+	background-color: lightgray;
 }
 
 .crumb::before {
-    content: ">";
-    margin: 10px 15px 10px 0px;
+	content: ">";
+	margin: 10px 15px 10px 0;
 }
